--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.applicationrociosieiro">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".StartApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,15 +13,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ApplicationRocioSieiro">
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.search.SearchActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.ApplicationRocioSieiro.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+      <!--  <activity
+            android:name=".presentation.search.SearchActivity">
+        </activity>-->
     </application>
-
 </manifest>
