--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,37 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext {
+        kotlin_version = '1.4.10'
+        koin_version = '2.1.6'
+        retrofit_version = '2.9.0'
+        converter_gson_version = '2.9.0'
+        okhttp_version = '4.8.0'
+        junit_version = '4.13.1'
+        android_junit_version = '1.1.2'
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0"
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
+
+        classpath "org.koin:koin-gradle-plugin:$koin_version"
+
+        classpath 'com.google.gms:google-services:4.3.4'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
+        classpath 'com.google.firebase:perf-plugin:1.3.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+
+    repositories {
+        google()
+        jcenter()
     }
 }
 
@@ -24,3 +45,5 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+apply plugin: 'koin'
