--- a/base/build.gradle
+++ b/base/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -50,6 +51,8 @@ dependencies {
 
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
+    api "io.coil-kt:coil:$coil_version"
 
     api "com.squareup.retrofit2:retrofit:$retrofit_version"
     api "com.squareup.retrofit2:converter-gson:$converter_gson_version"
