--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         okhttp_version = '4.8.0'
         junit_version = '4.13.1'
         android_junit_version = '1.1.2'
+        coil_version = '1.0.0-rc3'
     }
     repositories {
         google()
